[추가] 개발 환경 구성을 위한 작업  1. 로컬 PC에서 개발 IDE인 intellij를 통해 프로젝트 build와 함께 도커 이미지를 만들고 배포하는 환경  2. k8s에 서비스하기 위한 kubernetes resources 작성